--- a/browser/index.html
+++ b/browser/index.html
@@ -6,7 +6,7 @@
     <link href="/bootstrap-dark.css" rel="stylesheet" />
     <link href="/style.css" rel="stylesheet" />
     <script src="/angular/angular.js" defer></script>
-    <script src="/angular-ui-router/release/angular-ui-router.min.js" defer></script>
+    <script src="/angular-ui-router/release/angular-ui-router.js" defer></script>
     <script src="/js/module.js" defer></script>
     <script src="/js/album/album.controllers.js" defer></script>
     <script src="/js/album/album.factory.js" defer></script>
@@ -18,133 +18,39 @@
     <script src="/js/artist/artist.factory.js" defer></script>
     <script src="/js/artist/artist.states.js" defer></script>
     <script src="/js/song/song.factory.js" defer></script>
-
+    <script src="/js/playlist/playlist.controllers.js" defer></script>
+   <script src="/js/playlist/playlist.states.js" defer></script>
+      <script src="/js/playlist/playlist.factory.js" defer></script>
   </head>
   <body ng-app="juke">
-<!--     <div ng-controller="SidebarCtrl">
-      <div>
-        <h3>Three H</h3>
-        <ui-view></ui-view>
-        <p>This paragraph contains words, but you knew that already.</p>
-      </div>
-    </div> -->
-
     <div id="main" class="container-fluid">
 
       <div class="col-xs-2">
         <sidebar ng-controller="SidebarCtrl">
           <img src="juke.svg" class="logo">
           <section>
-            <h4 class="playlist-item active">
-              <a ui-sref="AllAlbumsState()">ALBUMS</a>
+            <h4 ui-sref-active="active" class="playlist-item active">
+              <a ui-sref="albums">ALBUMS</a>
             </h4>
           </section>
           <section>
-            <h5 class="playlist-item">
-              <a ui-sref="AllArtistsState()">ARTISTS</a>
-            </h5>
+            <h4 ui-sref-active="active" class="playlist-item">
+              <a ui-sref="artists">ARTISTS</a>
+            </h4>
+          </section>
+          <hr>
+          <section>
+            <h4 class="text-muted">PLAYLISTS</h4>
+            <p>
+              <a ui-sref="playlists" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-plus"></span> PLAYLIST</a>
+            </p>
           </section>
         </sidebar>
       </div>
 
       <div class="col-xs-10">
         <ui-view></ui-view>
-<!-- 
-        <div ng-controller="AlbumsCtrl" ng-show="showMe">
-          <h3>Albums</h3>
-          <div class="row">
-            <div class="col-xs-4" ng-repeat="album in albums">
-              <a class="thumbnail" href="#" ng-click="viewOneAlbum(album)">
-                <img ng-src="{{ album.imageUrl }}">
-                <div class="caption">
-                  <h5>
-                    <span>{{ album.name }}</span>
-                  </h5>
-                  <small>{{ album.songs.length }} songs</small>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
 
-        <div class="album" ng-controller="AlbumCtrl" ng-show="showMe">
-          <p>
-            <h3>{{ album.name }}</h3>
-            <img ng-src="{{ album.imageUrl }}" class="img-thumbnail">
-          </p>
-          <table class='table'>
-            <thead>
-              <tr>
-                <th></th>
-                <th>Name</th>
-                <th>Artists</th>
-                <th>Genres</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr ng-repeat="song in album.songs" ng-class="{active: song === getCurrentSong() }">
-                <td>
-                  <button class="btn btn-default btn-xs" ng-click="toggle(song)">
-                    <span class="glyphicon" ng-class="{ 'glyphicon-pause': isPlaying(song), 'glyphicon-play': !isPlaying(song) }"></span>
-                  </button>
-                </td>
-                <td>{{ song.name }}</td>
-                <td><span ng-repeat="artist in song.artists">{{ artist.name }}{{ $last ? '' : ', ' }}</span></td>
-                <td>{{ song.genres.join(', ') }}</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-
-        <div ng-show="showMe" ng-controller="ArtistsCtrl">
-          <h3>Artists</h3>
-            <div class="list-group">
-              <div class="list-group-item" ng-repeat="artist in artists">
-              <a href="#" ng-click="viewOneArtist(artist)">{{ artist.name }}</a>
-            </div>
-          </div>
-        </div>
-
-        <div ng-show="showMe" ng-controller="ArtistCtrl">
-            <h3>{{ artist.name }}</h3>
-            <h3>Albums</h3>
-            <div class="row">
-              <div class="col-xs-4" ng-repeat="album in artist.albums">
-                <a class="thumbnail" href="#" ng-click="viewOneAlbum(album)">
-                  <img ng-src="{{ album.imageUrl }}">
-                  <div class="caption">
-                    <h5>
-                      <span>{{ album.name }}</span>
-                    </h5>
-                    <small>{{ album.songs.length }} songs</small>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <table class='table'>
-              <thead>
-                <tr>
-                  <th></th>
-                  <th>Name</th>
-                  <th>Artists</th>
-                  <th>Genres</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr ng-repeat="song in artist.songs" ng-class="{active: song === getCurrentSong() }">
-                  <td>
-                    <button class="btn btn-default btn-xs" ng-click="toggle(song)">
-                      <span class="glyphicon" ng-class="{ 'glyphicon-pause': isPlaying(song), 'glyphicon-play': !isPlaying(song) }"></span>
-                    </button>
-                  </td>
-                  <td>{{ song.name }}</td>
-                  <td><span ng-repeat="artist in song.artists">{{ artist.name }}{{ $last ? '' : ', ' }}</span></td>
-                  <td>{{ song.genres.join(', ') }}</td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
- -->
       </div>
 
       <footer>
