--- a/browser/index.html
+++ b/browser/index.html
@@ -44,8 +44,8 @@
             <p>
               <a ui-sref="playlists" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-plus"></span> PLAYLIST</a>
             </p>
-            <p class="playlist-item"ng-repeat="playlist in allPlaylists">
-               <a>{{ playlist.name }}</a>
+            <p class="playlist-item" ng-repeat="playlist in allPlaylists">
+               <a ui-sref="playlists.songAdder({ playlistName: playlist.name })" ng-click="getPlaylist(playlist.name)">{{ playlist.name }}</a>
             </p>
           </section>
         </sidebar>
